Rename Yarn names to Mojang names at 1.21.11
Swap `mappings` to `loom.officialMojangMappings()` and rename everything
that survived the 4.2 cut. The game version does not move, so every break
is a rename break.

Done with codemods rather than by hand: imports and class names first,
then the access widener including its embedded descriptors, then members
resolved from javac's own `symbol:`/`location:` report walked up a
class hierarchy parsed out of the mapped jar.

Two things the mapping tables do not tell you directly:

- Overloads share a Yarn name, so members key on
  `(intermediary name, official descriptor)` and only rename when the
  Yarn name maps to exactly one Mojang name.
- A Yarn name that is also a valid Mojang member of the same class never
  raises "cannot find symbol", so error-driven renaming cannot see it.
  `Tag.getType()` is Mojang's `getId()` while Mojang's own `getType()`
  returns `TagType<?>`. A separate audit pass looked for these.

`ConfigValue.getValue`/`setValue` became `getConfigValue`/`setConfigValue`:
they collided with `EditBox.getValue()`, which Yarn called `getText`.

`./gradlew build` is green, access widener included. The ~25 `Cannot remap`
warnings from `remapJar` are the remaining intermediary references and
belong to 4.4.

Co-Authored-By: Claude Opus 5 <noreply@anthropic.com>